# proofloops

./: .gitignore  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  proofyloops.py  pyproject.toml
.github/: settings.yml
.github/workflows/: ci.yml
docs/: smt.md  usage.md
fixtures/lean-fixture/: lakefile.lean
fixtures/lean-fixture/LeanFixture/: Main.lean  WithTools.lean
mcp-server/: Cargo.toml
mcp-server/examples/: stdio_smoke.rs
mcp-server/src/: main.rs
proofloops-core/src/: lib.rs
proofloops-core/tests/: research_ingest.rs
proofpatch-cli/: Cargo.toml  README.md
proofpatch-cli/src/: main.rs
proofpatch-core/: Cargo.toml  README.md
proofpatch-core/src/: config.rs  json_extract.rs  lib.rs  llm.rs  smt_lia.rs  tree_search.rs
proofpatch-lean-embed/: Cargo.toml
target-install-cli/: .rustc_info.json
target-install-cli/release/: proofpatch.d
target-install-cli/release/.fingerprint/aho-corasick-f7cad5aa33656725/: lib-aho_corasick  lib-aho_corasick.json
target-install-cli/release/.fingerprint/anyhow-1f708fb771996864/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-install-cli/release/.fingerprint/anyhow-41306d98726a9ae7/: build-script-build-script-build  build-script-build-script-build.json
target-install-cli/release/.fingerprint/anyhow-d07b7a5e69ab56c7/: lib-anyhow  lib-anyhow.json
target-install-cli/release/.fingerprint/atomic-waker-03abd245664a9468/: lib-atomic_waker  lib-atomic_waker.json
target-proofpatch/debug/examples/: stdio_smoke-2b1d044a981a65d0.d  stdio_smoke.d
(+969 files in other folders)
