[package]
name = "proofpatch-mcp"
version = "0.1.0"
edition = "2021"
publish = false

description = "MCP server wrapper for proofpatch (stdio)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/proofpatch"
homepage = "https://github.com/arclabs561/proofpatch"
readme = "../README.md"

[[bin]]
name = "proofpatch-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smtkit = "0.1.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
proofpatch-core = { path = "../proofpatch-core" }
rmcp = { version = "0.17", features = ["macros", "server", "client", "transport-io", "transport-child-process", "schemars"] }
schemars = { version = "1", features = ["derive"] }
